# backend

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test_endpoint.py
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: c1bbde056886_init_schema.py
app/: main.py
app/api/v1/: agents.py  health.py  jobs.py  protected_agents.py  reports.py  system.py
app/core/: config.py  database.py  exceptions.py  response.py
app/models/: __init__.py  agents.py  associations.py  base.py  jobs.py  models.py  reports.py
app/schemas/: agent_auth.py  agents.py  jobs.py  reponse.py  reports.py  response.py  response_models.py  utc_datetime.py
app/services/: agents.py  agents_service.py  jobs.py  jobs_service.py  reports.py  reports_service.py
app/services/tools/: base.py  ffuf.py  manager.py  nmap.py  tool.py  tool_manager.py  tool_parser.py  tshark.py
app/services/tools/ffuf/: parser.py  (+2 more)
app/utils/: auth.py  uuid.py
docs/: 01_PROJECT_STRUCTURE.md  02_API_ROUTES.md  03_ADDING_NEW_TOOL.md  04_DEPLOYMENT.md  05_LIST_OF_TESTS.md  API_RESPONSES.md  API_ROUTES.md  DATABASE_UML.drawio  DEPLOYMENT.md  POSTMAN_EXAMPLES.md  PROJECT_STRUCTURE.md  RESPONSE_EXAMPLES.md
docs/assets/: DATABASE_UML.drawio
scripts/: init-db.sql  seed-db.sql
tests/: test_agents_routes.py  test_command_validation.py  test_health.py  test_job_creation.py  test_jobs_routes.py  test_report_parsers.py  test_reports_routes.py  test_static_routes.py
(+6 files in other folders)
